2007-07-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/debug.py (AllocMonitor): New object, uses
	PySizer (http://pysizer.8325.org/) to periodically monitor the
	python heap and print out information about allocations.

	* flumotion/test/test_common_netutils.py
	(TestRoutingTable.testRouteNamesOrder): New test, that
	getRouteNames() returns the names in the order in which they are
	first seen by the routing table.

2007-07-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/playlist/playlist.py
	  (PlaylistProducer._buildAudioPipeline):
	Force output audio to be 16bit width and depth.

2007-07-23  Pedro Gracia <pedro@flumotion.com>

	* flumotion/admin/gtk/client.py:
	Reverted changes from ticket #293. It's useful to stop
	components with mood different to 'happy'.

2007-07-23  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/pond.py:
	* flumotion/test/comptest.py:
	* flumotion/test/test_pond.py:
	* flumotion/test/test_comptest.py:
	Rename 'Pond' -> 'ComponentTestHelper'.

2007-07-23  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/pond.py:
	Fix component clock synchronization and startup dealy code; turn
	some callback functions into less implicit helper functions.

	* flumotion/test/test_pond.py:
	Add tests for providing clocking info and for startup delays,
	remove redundant/useless tests, fix spelling, replace unclear
	callbacks.

2007-07-20 Pedro Gracia <pedro@flumotion.com>

	* flumotion/admin/gtk/client.py:
	Closed ticket #293

2007-07-20  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/pond.py (Pond.set_flow):
	Don't use 9 lines of code where 1 is enough.

2007-07-20  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/pond.py (ComponentWrapper.get_unique_name,
	  Pond.do_stop, Pond.stop_flow):
	Don't use language elements not available in python2.3.

2007-07-20  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/pond.py:
	* flumotion/test/test_pond.py: